--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "General Assembly",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "pg": "^7.11.0",
-    "sequelize": "^5.9.4"
+    "sequelize": "^5.9.4",
+    "sequelize-cli": "^5.5.1"
   }
 }
